development/sf_project/force-app/main/default/objects/MergeAuditLog__c/MergeAuditLog__c.object-meta.xml
<CustomObject>
    <label>Merge Audit Log</label>
    <pluralLabel>Merge Audit Logs</pluralLabel>
    <nameField>
        <label>Merge Audit Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>MAL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks all patient merge operations for compliance and audit purposes.</description>
</CustomObject>