development/sf_project/force-app/main/default/objects/MergeAuditLog__c/fields/Fields_Changed__c.field-meta.xml
<CustomField>
    <fullName>Fields_Changed__c</fullName>
    <label>Fields Changed</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>JSON summary of field values that were changed during the merge operation.</description>
</CustomField>