development/sf_project/force-app/main/default/objects/MergeAuditLog__c/fields/Master_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Record__c</fullName>
    <label>Master Record</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>MergeAuditLogs</relationshipName>
    <relationshipLabel>Merge Audit Logs</relationshipLabel>
    <required>true</required>
    <description>The surviving master record after the merge operation.</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>