development/sf_project/force-app/main/default/objects/MergeAuditLog__c/fields/Merged_By__c.field-meta.xml
<CustomField>
    <fullName>Merged_By__c</fullName>
    <label>Merged By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>MergeAuditLogs</relationshipName>
    <relationshipLabel>Merge Audit Logs</relationshipLabel>
    <description>The user who performed the merge operation.</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>