development/sf_project/force-app/main/default/objects/MergeAuditLog__c/fields/Merged_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Merged_Record_Id__c</fullName>
    <label>Merged Record ID</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>The ID of the record that was merged into the master (no longer exists after merge).</description>
</CustomField>